--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint-config-xo": "^0.37.0",
     "nodemon": "^2.0.11",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
